[package]
name = "business-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-smithy-client = { version = "0.52.0", features = ["test-util"] }
bcrypt = "0.14"
chrono = "0.4"
jsonwebtoken = "8.2.0"
lambda_http = "0.7.2"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
tokio = { version = "1.21.1", features = ["full"] }

# From AWS documentation
lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
http = "0.2.8"

[[bin]]
name = "log_in"
path = "src/log_in.rs"

[[bin]]
name = "get_calendar_dates_by_date"
path = "src/get_calendar_dates_by_date.rs"

[[bin]]
name = "put_item"
path = "src/put_item.rs"
